--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,6 +42,18 @@
         </p>
         <button id="update-button">Replace Yoda's quote</button>
       </div>
+
+      <div>
+        <h2>Remove Darth Vader!</h2>
+        <p>
+          Delete one Darth Vader's quote. Does nothing if there are no more Darth
+          Vader's quote
+        </p>
+        <button id="delete-button">Delete Darth Vader's quote</button>
+      </div>
+
+      <div id="message"></div>
+      
       <script src="/main.js"></script>
 </body>
 
